<resources>
    <string name="app_name">CalTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Welcome</string>
    <string name="high_score">High Score:%d</string>
    <string name="start">Start</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn_clear">C</string>
    <string name="btn_submit">OK</string>
    <string name="cur_score">Score:%d</string>
    <string name="input_indicator">****</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="result_unknown">\?</string>
    <string name="lose_img_desc">lose image</string>
    <string name="win_img_desc">win image</string>
    <string name="lose_message">You Lose!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_score">Your Score:%d</string>
    <string name="win_score">New Record:%d</string>
    <string name="btn_back_to_title">Back</string>
    <string name="reset">reset</string>
    <string name="quit">Quit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
